<resources>
    <string name="app_name">Buckeye Schedule</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="back_to_sign_in">Sign In</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="update_password">Update Password</string>
    <string name="username">Username:</string>
    <string name="schedule_title">Schedule Title</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="buckeye_schedule">BUCKEYE SCHEDULE</string>
    <string name="email_">Email:</string>
    <string name="password_">Password:</string>
    <string name="schedule_subtitle">Schedule Subtitle</string>
    <string name="type_your_schedule_here">Type your schedule here...</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="click_here_to_pick_a_time">Click here to pick a time</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="are_you_sure_you_want_to_delete_this_schedule">Are you sure you want to delete this schedule?</string>
    <string name="delete">Delete</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="change_language">Change Language</string>
    <string name="enter_key_words">Enter key words...</string>
</resources>